# LORA-Comms

./: .gitattributes  .gitignore  CARBON_DESIGN_SYSTEM.md  CARBON_IMPLEMENTATION_SUMMARY.md  COREBLUETOOTH_INTEGRATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MESHTASTIC_INTEGRATION_PLAN.md  PROJECT_SUMMARY.md  README.md  REDIS_CACHE_README.md  build.sh  build_and_run.sh  build_and_sign.sh  lora_chat_app_spec.md  test_redis_cache.sh
Core/: Cargo.toml  build.rs
Core/proto/: meshtastic.proto
Core/src/: lib.rs
Core/src/bridge/: mod.rs
Core/src/device/: mod.rs  serial.rs
Core/src/mqtt/: mod.rs
Core/src/protocol/: mod.rs
Core/src/radio/: config.rs  mod.rs
LORA Comms/: BluetoothManager.swift  CarbonTheme.swift  ContentView.swift  CryptoManager.swift  DeviceManager.swift  LORA Comms.entitlements  LORA_CommsApp.swift  MeshtasticManager.swift  MeshtasticModels.swift  MeshtasticSupportingViews.swift  MeshtasticView.swift  Models.swift  Persistence.swift  RedisCache.swift
LORA Comms.xcodeproj/: project.pbxproj
LORA Comms/CarbonSwiftUI/: CarbonButton.swift  CarbonModal.swift  CarbonNotification.swift  CarbonProgressIndicator.swift  CarbonSidebar.swift  CarbonTextField.swift
LORA Comms/LORA_Comms.xcdatamodeld/: .xccurrentversion
LORA Comms/Theme/: ThemeManager.swift
LORA Comms/Views/: BluetoothDeviceView.swift  CarbonShowcaseView.swift  ChatDetailView.swift  ChatListView.swift  ConnectionAssistantView.swift  (+2 more)
LORA CommsTests/: LORA_CommsTests.swift
LORA CommsUITests/: LORA_CommsUITests.swift  LORA_CommsUITestsLaunchTests.swift
Shared/: lora_comms_bridge.h
(+3 files in other folders)
