[package]
name = "lora-comms-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "lora_comms_core"
crate-type = ["cdylib", "staticlib"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-serial = { version = "5.4", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
libc = "0.2"
protobuf = "3.0"
protobuf-codegen = "3.0"
prost = "0.11"
prost-types = "0.11"
base64 = "0.21"
hex = "0.4"
bytes = "1.0"
futures = "0.3"
crc = "3.0"

# MQTT support
rumqttc = { version = "0.23", optional = true }
url = { version = "2.4", optional = true }

# For Swift FFI
# swift-bridge = "0.1"
async-trait = "0.1"
rand = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
io-kit-sys = "0.4"

[target.'cfg(target_os = "ios")'.dependencies]
core-foundation = "0.9"

[build-dependencies]
prost-build = "0.11"

[features]
default = ["serial"]
serial = ["tokio-serial"]
bluetooth = []
tcp = []
mqtt = ["rumqttc", "url"]
